# copyright-script

./: README.md
.github/workflows/: cargo-test.yml
checkstyle/: Cargo.toml  checkstyle-file-agpl-header.txt
checkstyle/src/: empty_line.rs  files_matching_glob_patterns.rs  glob_patterns.rs  main.rs  regex-matching.rs  regex_nonmatch.rs  regex_nonmatch_checking.rs  separate.rs  utils.rs
checkstyle/test_folder/dir3/: Syncer.txt  modifiedSyncer.kt
checkstyle/test_folder/files/: bad.txt
